[project]
name = "vimhelp"
version = "0.1"
requires-python = ">= 3.14"
dependencies = [
    "Flask",
    "gevent",
    "geventhttpclient",
    "google-cloud-ndb",
    "google-cloud-secret-manager",
    "google-cloud-tasks",
    "gunicorn",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["E", "F", "W", "I002", "N", "UP", "S", "B", "A", "C4", "DTZ", "SIM", "PTH", "PLE", "PLW", "RUF"]
ignore = ["DTZ003", "PLW0603", "SIM102", "SIM108", "UP007"]

[tool.ruff.lint.per-file-ignores]
"vimhelp/vimh2h.py" = ["E501", "PLW2901", "S704"]

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = ["http"]
